--- a/src/main/res/layout/mvvm_dlg_loading.xml
+++ b/src/main/res/layout/mvvm_dlg_loading.xml
@@ -4,7 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:background="@drawable/loading_dlg_bg"
+    android:background="@drawable/mvvm_loading_dlg_bg"
     android:elevation="@dimen/dp_10"
     android:padding="@dimen/dp_10"
     >
