--- a/src/main/res/layout/mvvm_dlg_loading.xml
+++ b/src/main/res/layout/mvvm_dlg_loading.xml
@@ -20,6 +20,7 @@
         />
 
     <TextView
+        android:id="@+id/tv_msg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/dp_10"
