完善 LogUtil 工具类

--- a/src/main/res/values/ids.xml
+++ b/src/main/res/values/ids.xml
@@ -2,4 +2,7 @@
 <resources>
     <item name="triggerDelayKey" type="id"/>
     <item name="triggerLastTimeKey" type="id"/>
+
+    <item name="multiClickFrequency" type="id"/>
+    <item name="multiClickLastTime" type="id"/>
 </resources>
