移除 dimens 中定义好的dp,sp

--- a/src/main/res/layout/mvvm_dlg_loading.xml
+++ b/src/main/res/layout/mvvm_dlg_loading.xml
@@ -5,15 +5,15 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:background="@drawable/mvvm_loading_dlg_bg"
-    android:elevation="@dimen/dp_10"
-    android:padding="@dimen/dp_10"
+    android:elevation="10dp"
+    android:padding="10dp"
     >
 
     <ProgressBar
         android:id="@+id/progress_bar"
         style="@android:style/Widget.Holo.Light.ProgressBar"
-        android:layout_width="@dimen/dp_50"
-        android:layout_height="@dimen/dp_50"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -23,10 +23,10 @@
         android:id="@+id/tv_msg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/dp_10"
+        android:paddingTop="10dp"
         android:text="@string/loading"
         android:textColor="@android:color/black"
-        android:textSize="@dimen/sp_16"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
