--- a/src/main/res/drawable/mvvm_loading_dlg_bg.xml
+++ b/src/main/res/drawable/mvvm_loading_dlg_bg.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
     >
-    <corners android:radius="@dimen/dp_8" />
+    <corners android:radius="8dp" />
     <solid android:color="@android:color/white" />
 </shape>
